--- a/并发编程/并发编程学习记录.md
+++ b/并发编程/并发编程学习记录.md
@@ -1,8 +1,8 @@
-# 01 | 可见性、原子性和有序性问题：并发编程Bug的源头
+# 一、可见性、原子性和有序性问题：并发编程Bug的源头
 
-## 并发编程的幕后故事
+## 1.  并发编程的幕后故事
 
-### 源头之一 #:   CPU、内存、I/O 设备 三者的速度差异
+### 1.1. 源头之一 #:   CPU、内存、I/O 设备 三者的速度差异
 
 - 三者之间存在速度差异 **=>** 故引入**缓存机制** . **=>** 缓存导致的**可见性问题**
 
@@ -59,11 +59,11 @@
   calc = 17132
   ```
 
-  
 
 
 
-### 源头之二：线程切换带来的原子性问题
+
+### 1.2. 源头之二：线程切换带来的原子性问题
 
 - 背景 : 我们现在基本都使用高级语言编程，高级语言里一条语句往往需要多条 CPU 指令完成，例如上面代码中的`count += 1`，至少需要三条 CPU 指令。
   - 指令 1：首先，需要把变量 count 从内存加载到 CPU 的寄存器；
@@ -80,7 +80,7 @@
 
 
 
-### 源头之三：编译优化带来的有序性问题
+### 1.3. 源头之三：编译优化带来的有序性问题
 
 - 编译器为了优化性能，有时候会**改变程序中语句的先后顺序**，例如程序中：“a=6；b=7；”编译器优化后可能变成“b=7；a=6；”
 
@@ -132,11 +132,11 @@
 
 
 
-# 02 | Java内存模型：看Java如何解决可见性和有序性问题
+# 二、内存模型：看Java如何解决可见性和有序性问题
 
 
 
-## Java 内存模型的处理方法
+## 1. Java 内存模型的处理方法
 
 - cpu 缓存 => 可见性问题
 - 编译优化 => 有序性问题
@@ -150,7 +150,7 @@
 
 
 
-## volatile
+## 2. volatile 介绍
 
 - 作用 : 声明于变量 , 禁用CPU缓存. 读写均直接从内存中操作 . 
 
@@ -182,39 +182,39 @@
 
 
 
-## Happens-Before 六大规则
+## 3. Happens-Before 六大规则
 
 - 简单描述 : 前面的操作结果对后续的操作结果是可见的.
 
   > 个人总结 :  就是 `volatile` 变量 的**前面的变量**改动的结果 , 对 `volatile` 变量是可见的. 
 
-### 1. 顺序性规则
+### 3.1. 顺序性规则
 
 - **`volatile` 修饰的变量相关的代码** 的前面的代码 , 是不会被指令重排到 其之后的.
 
 
 
-### 2. 变量规则
+### 3.2. 变量规则
 
-- 一个 `volatile ` 变量的写操作  , 对于后续的这个 `volatile` 变量的读操作是可见的 .  ( 也可以简单理解为禁用CPU缓存.)
+- 一个 `volatile` 变量的写操作  , 对于后续的这个 `volatile` 变量的读操作是可见的 .  ( 也可以简单理解为禁用CPU缓存.)
 
 
 
-### 3. 传递性
+### 3.3. 传递性
 
 - 描述 : 如果 A Happens-Before B，且 B Happens-Before C，那么 A Happens-Before C。
 
   ![](http://assets.studymachine.cn/img/202111170026206.png)
 
--  简单描述 : 
+-  简单描述 :
 
   - 线程A  `x = 42`  在  happen before `写变量 v = true`  (规则1)
-  - 线程A `写变量 v = true`  happen before `读变量 v = true ` (规则2) 
-  -  所以 , 由于传递性 `线程A 中的 x = 42` , 对 `线程B中 读取到 v = true `时 , 是可见的 . 
+  - 线程A `写变量 v = true`  happen before `读变量 v = true` (规则2)
+  - 所以 , 由于传递性 `线程A 中的 x = 42` , 对 `线程B中 读取到 v = true`时 , 是可见的 .
 
 
 
-### 4. 管程中锁的规则
+### 3.4. 管程中锁的规则
 
 - **描述** : 对一个锁的`解锁` **Happens-Before** 于后续对这个锁的`加锁`
 
@@ -240,7 +240,7 @@
 
 
 
-### 5. 线程start( ) 规则
+### 3.5. 线程start( ) 规则
 
 - **描述** : 线程A中调用 线程B的  `start()` 方法 , 则 **线程A  happens-before 线程B**  方法 , 线程 A 中调用B的start() 方法之前的修改 , 对后续线程B 来说是可见的 . 
 
@@ -266,7 +266,7 @@
 
 
 
-### 6. 线程 join ( ) 规则
+### 3.6. 线程 join ( ) 规则
 
 - 描述 : 线程 A 中调用 B 的 `join()` 方法.  则说B 中任意操作 , 均 happens-before A的调用B 的 `join()` 的这个操作 .   
 
@@ -291,7 +291,7 @@
 
 
 
-## final 关键字
+## 4. final 关键字
 
 - **作用 :** 被修饰的变量是不可变的 , 被修饰的类是不可被继承的. 
 
@@ -321,7 +321,7 @@
 
 
 
-# 03 | 互斥锁（上）：解决原子性问题
+# 三、互斥锁（上）：解决原子性问题
 
 
 
@@ -381,7 +381,7 @@ class SafeCalc {
 
 
 
-# 04 | 互斥锁（下）：如何用一把锁保护多个资源？
+# 四、互斥锁（下）：如何用一把锁保护多个资源？
 
 
 
@@ -451,11 +451,13 @@ class SafeCalc {
 
 
 
-# 05 | 一不小心就死锁了，怎么办？
+# 五、 一不小心就死锁了，怎么办？
 
 
 
-## 什么是死锁
+## 1. 什么是死锁
+
+- **细粒度锁**带来性能优化 , 同时也会导致出现死锁的问题 . 
 
 - 引入场景(转账) :  使用 `synchronize`  实现细粒度锁 .   `synchronize `分别锁转账操作双方的账户对象 .  
 
@@ -488,12 +490,12 @@ class SafeCalc {
 
 
 
-## 如何预防死锁
+## 2. 如何预防死锁
 
 - 出现死锁一般没有很好的办法解决 ,  往往只能重启应用 . 
 - 死锁只能避免 . 
 
-### 死锁出现的条件
+### 2.1. 死锁出现的条件
 
 > 满足以下**所有条件**时 , 才会出现死锁 . 
 
@@ -502,5 +504,243 @@ class SafeCalc {
 - **不可抢占** : 线程A不能强行抢占 线程B已经占有的资源 . 
 - **循环**等待  :   这里注意循环二字 . 即A 线程占有 B 线程等待的资源 , B线程占有 A线程等待的资源 , 相互占有 , 相互等待 . 
 
+
+
+### 2.2. 如何避免出现死锁
+
+> 上面提到 , 只有当4个条件同时满足时 , 才会出现死锁 . 
+>
 > 所以 ,  加锁时 , 只要破坏上面其中一个条件 , 就不会出现死锁的现象 . 
+
+
+
+#### 2.2.1. 破坏占用且等待条件
+
+
+
+// todo
+
+
+
+
+
+
+
+# 十六、Semaphore：如何快速实现一个限流器？
+
+
+
+
+
+## 1. 什么是信号量模型 ?
+
+- 计算机科学家迪杰斯特拉（Dijkstra）于 1965 年提出 , 用于解决并发编程的模型. 
+
+
+
+## 2. 信号箱模型的组成
+
+- 一个计数器
+- 一个等待队列
+- 三个方法 `init()`、`down()` 和 `up() `
+  - 这三个方法都是**原子性**的.
+  - `init()`：设置计数器的初始值。
+  - `down()`：计数器的值减 1；**如果此时计数器的值小于 0，则当前线程将被阻塞**，否则当前线程可以继续执行。
+  - `up()`：计数器的值加 1；**如果此时计数器的值小于或者等于 0，则唤醒等待队列中的一个线程**，并将其从等待队列中移除。
+
+- 信号量模型图
+
+  ![](http://assets.studymachine.cn/img/202112111551247.png)
+
+
+
+## 3. 如何使用信号量
+
+- 信号量模型里面，down()、up() 这两个操作历史上最早称为 **P 操作**和 **V 操作**，所以信号量模型也被称为 **PV 原语**。
+
+- 在 Java SDK 并发包里，`down()` 和 `up()` 对应的则是 `acquire()` 和`release()`。
+
+- 使用信号量实现互斥 : 
+
+  ```java
+  static int count;
+  
+  // 初始化信号量
+  static final Semaphore s  = new Semaphore(1);
+  
+  // 用信号量保证互斥    
+  static void addOne() {
+    s.acquire();  // 信号量 -1 => 相当于尝试加锁
+    try {
+      count+=1;
+    } finally {
+      s.release(); // 信号量 +1 => 相当于释放锁
+    }
+  }
+  ```
+
+  - **分析 :**  线程T1 执行  ` s.acquire()` 信号量 - 1 ,  如果 此时信号量 == 0 则继续往下走 .  后续线程 T2 执行   ` s.acquire()`  信号量 -1 . 此时 信号量  == -1 < 0 则阻塞 . 从而形成互斥 .  待 T1执行 `s.release()`  信号量 +1 == 0  符合 <= 0 则唤醒 T2 进入临界区  **(注意 : 这里T2不会重复去进行信号量 - 1)**
+
+
+
+
+
+## 4. 快速实现一个限流器
+
+- 在 Java SDK 中 , **Semaphore**  相对于 **Lock** , 有个很大的不同之处 .  **Semaphore 可以允许多个线程访问一个临界区**。
+
+- 各种池化技术的思想 , 就可以看成一个限流器的落地 .  可以允许多个线程进入临界区 ,  同时 利用 Semaphore的阻塞功能 , 进行限流 .  
+
+- 使用 `Semaphore` 实现限流器代码. 
+
+  ```java
+  // 对象池
+  class ObjPool<T, R> {
+    
+     // 存放对象
+    final List<T> pool;
+      
+    // 用信号量实现限流器
+    final Semaphore sem;
+      
+    // 构造函数
+    ObjPool(int size, T t){
+        //  注意这里的对象池容器, 不能使用线程不安全的ArrayList 或者其他. 
+      pool = new Vector<T>(){};
+      for(int i=0; i<size; i++){
+        pool.add(t);
+      }
+        // 注意!!! 这里入参 size, 就是初始化信号量 , 初始化信号量的数值 就是可以同时允许多少个线程进入临界区的数值 . 
+      sem = new Semaphore(size);
+    }
+      
+    // 利用对象池的对象，调用 func
+    R exec(Function<T,R> func) {
+      T t = null;
+      sem.acquire();
+      try {
+        t = pool.remove(0);
+        return func.apply(t);
+      } finally {
+        pool.add(t);
+        sem.release();
+      }
+    }
+  }
+  
+  // ========= 以上为定义 =======
+  
+  // ========= 以下为调用 ======= 
+  
+  // 创建对象池
+  ObjPool<Long, String> pool = 
+    new ObjPool<Long, String>(10, 2);
+  
+  // 通过对象池获取 t，之后执行  
+  pool.exec(t -> {
+      System.out.println(t);
+      return t.toString();
+  });
+  ```
+
+  > 简单总结 
+  >
+  > - 就是 池化思想  +  信号量(阻塞)   => 实现限流器. 
+  > - 仅允许池的容量数量的对象同时进入临界区 , 也就是执行目标代码 . 
+
+
+
+
+
+# 十七、ReadWriteLock：如何快速实现一个完备的缓存？
+
+
+
+## 1. 读写锁概述
+
+- 针对**读多写少**这种并发场景，Java SDK 并发包提供了读写锁——**ReadWriteLock**，非常容易使用，并且性能很好。
+- 读写锁的三个基本守则 : 
+  - 允许多个线程同时读共享变量；
+  - 只允许一个线程写共享变量；
+  - 如果一个写线程正在执行写操作，此时禁止读线程读共享变量。
+
+
+
+
+
+## 2. 实现缓存的按需加载
+
+- 先判断缓存中是否存在对应的缓存对象 , 没有则进行查库 , 并写入缓存中 . 
+
+- 代码实现 : 
+
+  ```java
+  class Cache<K,V> {
+      // 缓存容器
+    final Map<K, V> m =
+      new HashMap<>();
+      
+      // 读写锁
+    final ReadWriteLock rwl = 
+      new ReentrantReadWriteLock();
+      
+      // 读锁
+    final Lock r = rwl.readLock();
+      
+      // 写锁
+    final Lock w = rwl.writeLock();
+   
+      // 获取数据
+    V get(K key) {
+      V v = null;
+      // 读缓存
+      r.lock();    // 读锁加锁     ①
+      try {
+        v = m.get(key); ②
+      } finally{
+        r.unlock();  // 读锁解锁   ③
+      }
+      // 缓存中存在，返回
+      if(v != null) {   ④
+        return v;
+      }  
+      // 缓存中不存在，查询数据库
+      w.lock();   // 写锁加锁      ⑤
+      try {
+        // 再次验证
+        // 其他线程可能已经查询过数据库
+        v = m.get(key); ⑥
+        if(v == null){  ⑦
+          // 查询数据库
+          v= 省略代码无数
+          m.put(key, v); // 放入缓存
+        }
+      } finally{
+        w.unlock(); // 写锁解锁
+      }
+      return v;  // 返回数据
+    }
+  } 
+  ```
+
+
+
+
+
+## 3. 读写锁的升级与降级
+
+
+
+### 3.1. 锁的升级
+
+- 读锁加锁过程中 , 在释放读锁之前 , 进行写锁加锁 , 这个操作称作**读写锁的升级** . (读锁 ==> 写锁) . 
+  - 注意 :  `ReadWriteLock `并不支持这种升级。 上述操作最终导致相关线程都被阻塞，永远也没有机会被唤醒。
+
+
+
+### 3.2. 锁的降级
+
+- 同理 , 由锁升级的定义可知 , 读写锁的降级 , **就是在写锁过程中(未释放写锁) , 进行读锁加锁 .** 
+-  `ReadWriteLock ` 是支持锁的降级的 . 
+- 
 
